--- a/style.less
+++ b/style.less
@@ -1,9 +1,34 @@
-/** 
+/**
 * Anax Flat theme.
 */
 @import url(modules.less);
 
 
+/** --------------------------------------------------------------
+ *  Header
+ */
+.site-header{
+    height: 80px;
+}
+
+.site-logo-text,
+.navbar2,
+.profile {
+    float: left;
+    width: 33%;
+}
+
+.site-logo-text {
+    font-size: 2em;
+
+    a {
+        text-decoration: none;
+        color: black;
+    }
+}
+
+@maxButtonFontSize: 1.8em;
+@navbarItemBgColor: #878a9e;
 
 /** --------------------------------------------------------------
  *  Logo images
@@ -18,4 +43,56 @@
     img {
         vertical-align: bottom;
     }
+}
+
+/** --------------------------------------------------------------
+ *  Responsive design
+ */
+ @media screen and (max-width: 970px) {
+    .flash-wrap img{
+        display: none;
+    }
+}
+
+ @media screen and (max-width: 900px) {
+    .site-logo-text {
+        width: 50%;
+    }
+
+    .navbar2 {
+        width: 40%;
+    }
+
+    .profile {
+        width: 10%;
+    }
+}
+@media screen and (max-width: 650px) {
+   .sidebar {
+       width: 100%;
+   }
+}
+@media screen and (max-width: 880px) {
+   .footer-column{
+       width: 100%;
+   }
+}
+
+@media screen and (max-width: 590px) {
+  .navbar2 {
+      display: none;
+      width: 0;
+  }
+  .site-logo-text {
+      width: 90%;
+  }
+  .profile {
+      width: 10%;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .site-logo-text {
+      display: none;
+  }
 }
