Modules and styles

--- a/modules.less
+++ b/modules.less
@@ -1,8 +1,6 @@
-// <<<<<<< HEAD
+
+
 /**
-// =======
-/**
->>>>>>> c619ba689128f484b0e7d7725ac359e7b48bf676
  * Base theme including all modules needed.
  *
  * Each module is within its own
@@ -12,10 +10,11 @@
  * the same modules.
  */
 //@import url(some-module.less);
-// <<<<<<< HEAD
+
 @import url(normalize.less);
 @import url(regions.less);
 // Responsive menu
 @import url(responsive-menu.less);
-// =======
-// >>>>>>> c619ba689128f484b0e7d7725ac359e7b48bf676
+
+@import url(variables.less);
+@import url(font-awesome.less);
