--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -2,9 +2,6 @@
 * Anax Flat theme.
 */
 /**
-// =======
-/**
->>>>>>> c619ba689128f484b0e7d7725ac359e7b48bf676
  * Base theme including all modules needed.
  *
  * Each module is within its own
@@ -3048,6 +3045,10 @@ a.rm-button.rm-clicked .rm-button-face-2 {
   overflow: visible;
   clip: auto;
 }
+p {
+  margin-left: 2%;
+  margin-right: 2%;
+}
 /** --------------------------------------------------------------
  *  Header
  */
@@ -3090,6 +3091,7 @@ a.rm-button.rm-clicked .rm-button-face-2 {
 .footer {
   background-color: #878a9e;
   padding: 10px 0 10px 0;
+  color: white;
 }
 .footer-column {
   padding: 10px 0 0 2%;
