--- a/style.less
+++ b/style.less
@@ -3,7 +3,10 @@
 */
 @import url(modules.less);
 
-
+p {
+    margin-left: 2%;
+    margin-right: 2%;
+}
 /** --------------------------------------------------------------
  *  Header
  */
@@ -59,6 +62,7 @@
 .footer {
     background-color: #878a9e;
     padding: 10px 0 10px 0;
+    color: white;
 
 }
 .footer-column{
