--- a/modules.less
+++ b/modules.less
@@ -12,9 +12,13 @@
 //@import url(some-module.less);
 
 @import url(normalize.less);
-@import url(regions.less);
+// @import url(regions.less);
+@import url(grid-float.less);
+@import url(layout.less);
 // Responsive menu
 @import url(responsive-menu.less);
 
-@import url(variables.less);
+// @import url(variables.less); Testar tar bort
 @import url(font-awesome.less);
+@import url(mymixins.less);
+// @import url(grid-flex.less);
