--- a/style.less
+++ b/style.less
@@ -2,10 +2,71 @@
 * Anax Flat theme.
 */
 @import url(modules.less);
+@maxButtonFontSize: 1.8em;
+@navbarItemBgColor: #878a9e;
 
+/*
+* Fontvariabler
+*/
+@fontSizeH1: 2.375em;
+@fontSizeH4: 1.07em;
+@fontSizeP: 1em;
+
+@colorH1BorderBottom: #666;
+@borderSizeH1: 1px;
+
+
+body {
+    font-family: @fontFamilyBody;
+}
 p {
     margin-left: 2%;
-    margin-right: 2%;
+    margin-right: 3%;
+    .fontSize(@fontSizeP);
+}
+h1, h2, h3, h4, h5, h6 {
+    margin-top: @magicNumber;
+    margin-bottom: @magicNumber;
+    font-family: @fontFamilyHeadings;
+}
+
+
+h1 {
+    .fontSize(@fontSizeH1);
+    font-weight: normal;
+
+    // border-bottom: @borderSizeH1 solid @colorH1BorderBottom;
+    margin-bottom: @magicNumber - @borderSizeH1;
+
+    margin-left: 1%;
+    // If header below h1, then assume larger margin top
+    & ~ h1,
+    & ~ h2,
+    & ~ h3,
+    & ~ h4,
+    & ~ h5,
+    & ~ h6,
+     {
+        margin-top: @magicNumber * 2;
+    }
+    // Single margin when subheader follows directly
+    & + h2 {
+        margin-top: @magicNumber;
+    }
+}
+
+h4 {
+    .fontSize(@fontSizeH4);
+    
+    /*funkar inte*/
+    // & + p {
+    //     margin-bottom: 0;
+    // }
+    // margin-bottom: 0;
+}
+
+.next{
+    margin-right: 5%;
 }
 /** --------------------------------------------------------------
  *  Header
@@ -17,11 +78,12 @@ p {
 .logo-1{
     display: none;
 }
+
 .site-logo-text,
 .navbar2,
 .profile {
-    float: left;
-    width: 33%;
+    .column(4);
+    .boxsizing();
 }
 
 .site-logo-text {
@@ -36,9 +98,6 @@ p {
 .rm-max.rm-navbar{
     display: none;
 }
-
-@maxButtonFontSize: 1.8em;
-@navbarItemBgColor: #878a9e;
 
 /** --------------------------------------------------------------
  *  Logo images
@@ -60,17 +119,31 @@ p {
  *  Footer
  */
 .footer {
-    background-color: #878a9e;
+    background-color: @navbarItemBgColor;
     padding: 10px 0 10px 0;
     color: white;
+    // display: block;
 
 }
 .footer-column{
+    // float: left;
     padding: 10px 0 0 2%;
-    width: 30%;
+    .boxsizing();
+    // width: 28%;
+    .column(4);
     color: white;
     // background-color: #50667e;
+    border: 1px solid green;
+
+
 }
+.footer-column-wrapper{
+    .clearfix();
+}
+// .block.site-footer{
+//     border: 2px solid red;
+//     // width: 100%;
+// }
 
 /** --------------------------------------------------------------
  *  Responsive design
@@ -87,22 +160,30 @@ p {
     }
 
     .navbar2 {
-        width: 40%;
+        // width: 40%;
+        .column(5);
     }
 
     .profile {
-        width: 10%;
+        // width: 10%;
+        .column(1);
     }
 }
 @media screen and (max-width: 650px) {
    .sidebar {
        width: 100%;
+        // width: @gridSystemWidth;
    }
 }
 @media screen and (max-width: 880px) {
    .footer-column{
-       width: 98%;
-       border-bottom: 1px solid #374d65;
+        width: 100%;
+        // width: @gridSystemWidth;
+    //    width: 100%;
+        // margin-bottom: 1px;
+        margin-left: 0;
+        margin-right: 0;
+        border-bottom: 1px solid #374d65;
 
    }
    .footer{
@@ -119,10 +200,12 @@ p {
       display: block;
   }
   .site-logo-text {
-      width: 90%;
+    //   width: 90%;
+        .column(11);
   }
   .profile {
-      width: 10%;
+    //   width: 10%;
+      .column(1);
   }
 }
 
