--- a/modules.less
+++ b/modules.less
@@ -21,4 +21,5 @@
 // @import url(variables.less); Testar tar bort
 @import url(font-awesome.less);
 @import url(mymixins.less);
+@import url(grid-helpers.less);
 // @import url(grid-flex.less);
