--- a/modules/mymixins.less
+++ b/modules/mymixins.less
@@ -2,28 +2,28 @@
  * Typographic font families to choose from.
  */
 // Monospace
-@fontFamilyCourier:         "Courier New", Courier, monospace;
-@fontFamilyMonospace:       monospace;
-
-// Serif
-@fontFamilyCambria:         Cambria, Georgia, Times, 'Times New Roman', serif;
-@fontFamilyTimes:           Times, 'Times New Roman', serif;
-@fontFamilyGaramond:        Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", Georgia, "Times New Roman", Times, serif;
-
-// Sans-serif
-@fontFamilyHelvetica:       Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
-@fontFamilyCalibri:         Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
-@fontFamilyMyriadPro:       MyriadPro-Regular, 'Myriad Pro Regular', MyriadPro, 'Myriad Pro', Helvetica, Arial, sans-serif;
-@fontFamilyHelveticaNeue:   "Helvetica Neue", Helvetica, Arial, sans-serif;
-@fontFamilyArial:           Arial, sans-serif;
+// @fontFamilyCourier:         "Courier New", Courier, monospace;
+// @fontFamilyMonospace:       monospace;
+//
+// // Serif
+// @fontFamilyCambria:         Cambria, Georgia, Times, 'Times New Roman', serif;
+// @fontFamilyTimes:           Times, 'Times New Roman', serif;
+// @fontFamilyGaramond:        Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", Georgia, "Times New Roman", Times, serif;
+//
+// // Sans-serif
+// @fontFamilyHelvetica:       Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
+// @fontFamilyCalibri:         Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
+// @fontFamilyMyriadPro:       MyriadPro-Regular, 'Myriad Pro Regular', MyriadPro, 'Myriad Pro', Helvetica, Arial, sans-serif;
+// @fontFamilyHelveticaNeue:   "Helvetica Neue", Helvetica, Arial, sans-serif;
+// @fontFamilyArial:           Arial, sans-serif;
 
 
 /**
  * Default font-families
  */
-@fontFamilyHeadings:  @fontFamilyGaramond;
-@fontFamilyBody:      @fontFamilyHelvetica;
-@fontFamilyCode:      @fontFamilyCourier;
+// @fontFamilyHeadings:  @fontFamilyGaramond;
+// @fontFamilyBody:      @fontFamilyHelvetica;
+// @fontFamilyCode:      @fontFamilyCourier;
 /**
  * Size and lineheight calculation for magicNumber 24
  *
@@ -75,10 +75,10 @@
  * @magicNumber = @fontSizeBody * @lineHeight
  */
  //@magicNumber:   22px; /* 16px - 100%/1.375 */
-@magicNumber:   24px;   /* 16px - 100%/1.5 */
+// @magicNumber:   24px;   /* 16px - 100%/1.5 */
 // @fontSizeBody:  16px;
-@fontSizeBody:  16px;
-@lineHeight:    (unit(@magicNumber) / unit(@fontSizeBody)); /*lineHeight blir då 1,5 ggr fontSizeBody*/
+// @fontSizeBody:  16px;
+// @lineHeight:    (unit(@magicNumber) / unit(@fontSizeBody)); /*lineHeight blir då 1,5 ggr fontSizeBody*/
 
 /**
 * Sätter fontSize (em) och lineHeight i förhållande till den. När fontSize går över lineHeight går man in på ny multipel.
@@ -86,19 +86,19 @@
 * Låt @lineHeight: 1.5, @fontSize: 1.8
 * line-height: 1.5/1.8 * ceil(1.8/1.5) = 1.5/1.8 * 2 = 1.6667
 */
-.fontSize(@fontSize) {
-    font-size: @fontSize;
-    line-height: @lineHeight / unit(@fontSize) * ceil(unit(@fontSize) / @lineHeight);
+// .fontSize(@fontSize) {
+//     font-size: @fontSize;
+//     line-height: @lineHeight / unit(@fontSize) * ceil(unit(@fontSize) / @lineHeight);
 
     // Samma som ovan fast utan att nyttja @lineHeight
     // line-height: ceil(@fontSize*@fontSizeBody/@magicNumber)*@magicNumber/(@fontSize*@fontSizeBody);
-}
+// }
 /*
 * Sätter font och fontsize
 */
-.font(@fontSize: 100%, @fontFamily: @fontFamilyBody) {
-    font: @fontSize/@lineHeight @fontFamily;
-}
+// .font(@fontSize: 100%, @fontFamily: @fontFamilyBody) {
+//     font: @fontSize/@lineHeight @fontFamily;
+// }
 
 
 
