--- a/modules.less
+++ b/modules.less
@@ -14,6 +14,7 @@
 @import url(normalize.less);
 // @import url(regions.less);
 @import url(grid-float.less);
+// @import url(grid-layout.less);
 @import url(layout.less);
 // Responsive menu
 @import url(responsive-menu.less);
@@ -22,5 +23,6 @@
 @import url(font-awesome.less);
 @import url(mymixins.less);
 @import url(typography.less);
+// @import url(typography-layout.less);
 @import url(grid-helpers.less);
 // @import url(grid-flex.less);
