--- a/modules/typography-mixins.less
+++ b/modules/typography-mixins.less
@@ -1,7 +1,8 @@
 /**
  * Typographic mixins.
  */
-.font(@fontSize: 100.01%, @fontFamily: @fontFamilyBody) {
+ //@fontSize: 100.01%
+.font(@fontSize: 16px, @fontFamily: @fontFamilyBody) {
     font: @fontSize/@lineHeight @fontFamily;
 }
 
