--- a/modules/typography-sizes.less
+++ b/modules/typography-sizes.less
@@ -1,5 +1,5 @@
 /**
- * Typographic sizes for horisontal rythm. 
+ * Typographic sizes for horisontal rythm.
  */
 
 /**
@@ -18,9 +18,10 @@
 @fontSizeH5: 1em;
 @fontSizeH6: 0.875em;
 
-@fontSizeCodeInline:  1.25em;
-@fontSizeCodeBlock:   1.25em;
-@lineHeightCodeBlock: 1.6;
+@fontSizeCodeInline:  1.1em; //1.25em
+@fontSizeCodeBlock:   1.1em; //1.25em
+// @lineHeightCodeBlock: 1.6;
+@lineHeightCodeBlock: 1.518;
 
 @fontSizeSupSub: 0.75em;
 
