--- a/modules/grid-helpers.less
+++ b/modules/grid-helpers.less
@@ -31,7 +31,7 @@
 * Funkar med känns inte helt rätt ändå
 */
 .showTypoGrid(@typoGridHeight: @magicNumber) {
-    @linecolor: gray;
+    @linecolor: #b3b3b3;
     background-size: 100% @typoGridHeight;
 
 
