--- a/modules/typography-defaults.less
+++ b/modules/typography-defaults.less
@@ -372,6 +372,12 @@
         }
     }
 
+    .table2.striped {
+        thead {
+            background-color: black;
+            color: white;
+        }
+    }
     // Stripe each even row in table
     table.striped {
         tbody {
@@ -379,6 +385,9 @@
             tr.even td {
                 background-color: @bgColorTableStripe;
             }
+
+
+        
         }
     }
 }
